--- a/package.json
+++ b/package.json
@@ -6,19 +6,20 @@
   "bin": {},
   "scripts": {
     "dev": "tsc -w -p .",
-    "clean": "rimraf lib",
-    "test": "npm run lint",
-    "lint": "eslint src test",
     "build": "tsc -p .",
+    "clean": "rimraf lib",
+    "lint": "eslint src test",
     "release": "standard-version",
-    "postversion": "git push --follow-tags"
+    "fixture": "parcel ./fixtrue/index.js",
+    "postinstall": "electron-rebuild --version 6.1.7"
   },
   "publishConfig": {
     "access": "public"
   },
   "files": [
     "lib",
-    "src"
+    "src",
+    "fonts"
   ],
   "repository": {
     "type": "git",
@@ -37,14 +38,17 @@
     "@typescript-eslint/eslint-plugin": "^2.7.0",
     "@typescript-eslint/parser": "^2.7.0",
     "chai": "^4.1.2",
-    "electron-rebuild": "^1.8.8",
     "eslint": "^5.16.0",
     "mocha": "^6.1.3",
+    "picgo": "^1.3.7",
     "standard-version": "^7.0.1",
     "typescript": "^3.7.2"
   },
   "dependencies": {
-    "picgo": "^1.3.7",
-    "sharp": "^0.23.4"
+    "electron-rebuild": "^1.8.8",
+    "sharp": "^0.23.4",
+    "simple-svg-tools": "^1.1.12",
+    "svg-text": "^0.5.1",
+    "text-to-svg": "^3.1.5"
   }
 }
