refactor(lint): make lint happy

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "tsc -w -p .",
     "build": "tsc -p .",
     "clean": "rimraf lib",
-    "lint": "eslint src test",
+    "lint": "eslint src/*.ts --fix",
     "release": "standard-version",
     "postinstall": "electron-rebuild --version 6.1.7"
   },
@@ -16,8 +16,7 @@
     "access": "public"
   },
   "files": [
-    "lib",
-    "src"
+    "lib"
   ],
   "repository": {
     "type": "git",
