--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "echo 'test'",
     "lint": "eslint src/*.ts --fix",
     "release": "standard-version",
-    "postinstall": "electron-rebuild --version 6.1.7"
+    "postinstall": "node scripts/rebuild.js"
   },
   "publishConfig": {
     "access": "public"
