--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "picgo-plugin-watermark",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "PicGo's watermark plugin",
   "main": "./lib/index.js",
   "bin": {},
@@ -35,6 +35,9 @@
     "picgo-gui-plugin"
   ],
   "author": "Dec-F",
+  "contributors": [
+    "panyanbin <me@panyanbin.com> (https://www.panyanbin.com)"
+  ],
   "license": "MIT",
   "devDependencies": {
     "@types/fs-extra": "^9.0.12",
