--- a/package.json
+++ b/package.json
@@ -10,16 +10,14 @@
     "clean": "rimraf lib",
     "test": "echo 'test'",
     "lint": "eslint src/*.ts --fix",
-    "release": "standard-version",
-    "postinstall": "node scripts/rebuild.js"
+    "release": "standard-version"
   },
   "publishConfig": {
     "access": "public"
   },
   "files": [
     "lib",
-    "logo.png",
-    "scripts"
+    "logo.png"
   ],
   "repository": {
     "type": "git",
@@ -55,10 +53,10 @@
     "color": "^3.1.3",
     "dayjs": "^1.10.6",
     "fs-extra": "^10.0.0",
-    "sharp": "^0.28.3",
+    "sharp": "^0.29.1",
     "text-to-svg": "^3.1.5"
   },
   "engines": {
-    "node": ">10.0.0"
+    "node": ">12.13.0"
   }
 }
